# otto-cli

./: .dockerignore  .gitignore  .prompt-injection-scanignore  .secretscanignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  INSTALL.md  LOOP24-PATCHES.md  README.md  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.planning/: upstream-sync-config.json  upstream-sync-state.json
docker/: .env.example  Dockerfile.ci-builder  Dockerfile.sandbox  README.md  bootstrap.sh  docker-compose.full.yaml  docker-compose.yaml  entrypoint.sh
docs/: HARNESS-COMPAT.md  INSTALL.md  OTTO-ALIGNMENT.md  UPSTREAM-PIPELINE.md  UPSTREAM-SYNC.md  db-map.md  npm-registry-options.md  prompt-db-combined-map.md  prompt-map.md  release.md  token-consumption-savings-evidence.md
native/: Cargo.toml  README.md
native/crates/ast/: Cargo.toml
native/crates/ast/src/: lib.rs
native/crates/engine/: Cargo.toml
native/crates/engine/src/: git.rs  gsd_parser.rs  lib.rs
native/crates/grep/: Cargo.toml
native/crates/grep/src/: lib.rs
native/npm/darwin-arm64/: package.json
native/npm/darwin-x64/: package.json
native/npm/linux-arm64-gnu/: package.json
native/npm/linux-x64-gnu/: package.json
native/npm/win32-x64-msvc/: package.json
native/scripts/: build.js  sync-platform-versions.cjs
pkg/: package.json
scripts/: ai-triage-policy.mjs  branding-residue-check.mjs  bump-version.mjs  ci-classify-changes.sh  compile-tests.mjs  copy-resources.cjs  dev-cli-helpers.mjs  dev-cli.js  dist-test-resolve.mjs  generate-theme-const.mjs  install.js  (+34 more)
(+2689 files in other folders)
