[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.3.1"
edition = "2021"
license = "MIT"
authors = ["OTTO Contributors"]
repository = "https://github.com/cmetech/otto_app"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
codegen-units = 256
incremental = true
